# HybrTC

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  helloworld.edl  precommit
client/: CMakeLists.txt  client.cpp
cmake/: protobuf.cmake  spec.cmake
common/: attestation.hpp  bloom_filter.hpp  config.hpp  cuckoo_hashing.hpp  hash.hpp  log.h  message_types.hpp  paillier.hpp  prf.hpp  prng.hpp  prp.hpp  session.hpp  spdlog.hpp  timer.hpp  zmq_utils.hpp
common/attestation/: claims.hpp
common/common/: bit_mask.hpp  mbedtls.hpp  type_check.hpp  types.hpp  uint128.hpp
common/crypto/: aes.hpp  bignum.hpp  ctr_drbg.hpp  ecdh.hpp  ecdsa.hpp  ecp.hpp  entropy.hpp  gcm.hpp  sha256.hpp  sha512.hpp
common/crypto/internal/: resource.hpp
common/host/: TxSocket.hpp  communication.hpp  message.hpp  spdlog.hpp
common/host/socket/: socket.cpp  socket.h
common/proto/: msg.proto
common/sgx/: attestation.hpp  log.h  session.hpp
common/sgx/attestation/: attester.hpp  claims.hpp  verifier.cpp  verifier.hpp
common/socket/: socket.cpp  socket.h
common/type/: message.hpp
common/utils/: communication.hpp  spdlog.hpp  zmq.hpp
enclave/: CMakeLists.txt  enc.c  enc.cpp  helloworld.conf
enclave/attestation/: attester.hpp  verifier.hpp
host/: CMakeLists.txt  enclave.cpp  enclave.hpp  host.cpp  ocall.c
script/: parse.py  perf.py  perf_primitive.py  stat.py
server/: CMakeLists.txt  helloworld.edl
server/enclave/: CMakeLists.txt  attestation.hpp  enc.cpp  enclave_context.cpp  enclave_context.hpp  helloworld.conf  utils.hpp
server/enclave/attestation/: verifier.hpp
server/enclave/psi/: bloom_filter.hpp  cuckoo_hashing.hpp  hash.hpp  join_handler.cpp  join_handler.hpp  melbourne.cpp  melbourne.hpp  prp.hpp  query_handler.hpp  select_handler.cpp  select_handler.hpp
server/host/: CMakeLists.txt  data.hpp  enclave.cpp  enclave.hpp  host.cpp  psi_context.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/common/: config.hpp  paillier.hpp
src/common/common/: type_check.hpp
src/common/crypto/: aes.hpp  bignum.hpp  ctr_drbg.hpp  ecdh.hpp  ecdsa.hpp  gcm.hpp  sha256.hpp
src/common/crypto/internal/: resource.hpp
src/common/host/: TxSocket.hpp  message.hpp
src/common/host/socket/: socket.cpp
src/common/proto/: msg.proto
src/common/sgx/: log.h
src/common/sgx/attestation/: attester.cpp
src/server/: CMakeLists.txt  helloworld.edl
src/server/enclave/: CMakeLists.txt  enc.cpp  enclave_context.cpp  enclave_context.hpp  helloworld.conf  msg_pb.h
src/server/enclave/psi/: bloom_filter.hpp  join_handler.cpp  join_handler.hpp  melbourne.hpp  select_handler.cpp  select_handler.hpp
src/server/host/: CMakeLists.txt  enclave.cpp  enclave.hpp  host.cpp  psi_context.hpp
src/server/host/routine/: attestation.cpp  attestation.h  client_thread.cpp  peer_thread.cpp  routine.h
tests/: CMakeLists.txt  clocks_per_sec.cpp  cuckoo_hashing.cpp  demo.cpp  perf_bloomfilter.cpp  perf_cuckoohashing.cpp  perf_primitive.cpp  rundemo.py  test_bloom_filter.cpp  test_mpi.cpp  test_paillier.cpp
